# rust-matplotlib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: a_simple_example.rs  basic_example.rs  flower.rs
src/: lib.rs  main.rs
src/colors/: colors.py  mod.rs
