[package]
name = "matplotlib"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Binding to Python Matplotlib"
homepage = "https://github.com/Chris00/rust-matplotlib"
repository = "https://github.com/Chris00/rust-matplotlib.git"
documentation = "https://docs.rs/matplotlib"
license = "MIT"
keywords = ["plot", "graph", "curve", "surface"]
categories = ["science", "visualization", "mathematics", "graphics"]

[dependencies]
numpy = "0.20.0"
curve-sampling = { version = "0.3", optional = true }

[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize"]

[features]
default = ["curve-sampling"]