[package]
name = "matplotlib"
version = "0.2.0"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Binding to Python Matplotlib"
homepage = "https://github.com/Chris00/rust-matplotlib"
repository = "https://github.com/Chris00/rust-matplotlib.git"
documentation = "https://docs.rs/matplotlib"
license = "MIT"
keywords = ["plot", "graph", "curve", "surface"]
categories = ["science", "visualization", "mathematics", "graphics"]

[dependencies]
numpy = "0.21"
curve-sampling = { version = "0.5", optional = true, git = "https://github.com/Chris00/rust-curve-sampling.git" }
lazy_static = "1.4.0"

[dependencies.pyo3]
version = "0.21.2"
features = ["auto-initialize"]

[features]
default = ["curve-sampling"]

[dev-dependencies]
doc-comment = "0.3.3"
polars-core = { version = "0.38.1", features = ["fmt"] }
